# colortail

./: .gitignore  AUTHORS  BUGS  CfgFileParser.cc  CfgFileParser.h  ChangeLog  ColorTail.cc  ColorTail.h  Colorizer.cc  Colorizer.h  Info.cc  Info.h  Iterator.h  List.h  Makefile.am  Makefile.in  OptionsParser.cc  OptionsParser.h  README  TODO  TailFile.cc  TailFile.h  Usage.cc  Usage.h  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure.in  main.cc  main.h
example-conf/: Makefile.am  Makefile.in  conf.daemon  conf.kernel  conf.messages  conf.xferlog
