
SUBDIRS = example-conf

bin_PROGRAMS = colortail

colortail_SOURCES = \
CfgFileParser.cc \
CfgFileParser.h \
ColorTail.cc \
ColorTail.h \
Colorizer.cc \
Colorizer.h \
Info.cc \
Info.h \
Iterator.h \
List.h \
OptionsParser.cc \
OptionsParser.h \
TailFile.cc \
TailFile.h \
Usage.cc \
Usage.h \
main.cc \
main.h

EXTRA_DIST = README BUGS COPYING ChangeLog
