dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.h)

COLORTAIL_MAJOR=0
COLORTAIL_MINOR=3
COLORTAIL_MICRO=5
COLORTAIL_VERSION=$COLORTAIL_MAJOR.$COLORTAIL_MINOR.$COLORTAIL_MICRO

VERSION=$COLORTAIL_VERSION
PACKAGE=colortail

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

AM_MAINTAINER_MODE

AM_CONFIG_HEADER(config.h)

AC_DEFINE_UNQUOTED(COLORTAIL_VERSION, "$COLORTAIL_VERSION")
AC_SUBST(COLORTAIL_VERSION)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h regex.h gnuregex.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(regcomp)

AC_OUTPUT(Makefile example-conf/Makefile)


